fix: subscription_manager_id must be optional
- The subscription_manager_id must be an optional value for the DomainIpaServer
  schema.
- The database is updated to allow nullable value for the 'rhsm_id' field.
